--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@tailwindcss/forms": "^0.5.6",
     "next": "latest",
     "react": "latest",
