--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
+    "@googlemaps/markerclusterer": "^2.5.1",
     "@tailwindcss/forms": "^0.5.6",
     "next": "latest",
     "react": "latest",
